fix: z-index

--- a/assets/scss/partials/notification.scss
+++ b/assets/scss/partials/notification.scss
@@ -1,5 +1,4 @@
 .notification {
-  z-index: 99;
   position: fixed;
   top: 0;
   left: 0;
